--- a/crawler/tutorial/scrapy.cfg
+++ b/crawler/tutorial/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = appstore.settings
+default = tutorial.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = appstore
+project = tutorial
